# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  diff_with_formatter.py  package-lock.json  pyproject.toml  setup.cfg  stylish.py  test.py
.github/workflows/: hexlet-check.yml  main.yml  pyci.yml
gendiff/: __init__.py  cli.py  data.py  diff_with_formatter.py  gendiff.py  parser.py  reader.py
gendiff/formatter/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: .coverage  coverage.xml  test_data.yaml  test_gendiff.py  test_generate_diff.py
tests/fixtures/: answer_json_nested  demo.cast  file3.json
